--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/mocha": "^5.2.6",
     "@types/node": "^8.10.38",
     "chai": "^4.2.0",
+    "dockerode": "^3.3.1",
+    "dockerode-compose": "^1.2.2",
     "hardhat": "^2.0.0",
     "mocha": "^7.1.2",
     "prettier": "2.0.5",
@@ -44,5 +46,6 @@
   },
   "peerDependencies": {
     "hardhat": "^2.0.0"
-  }
+  },
+  "dependencies": {}
 }
